code/dotnet/RealTimeNews/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time News client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Nuget](https://img.shields.io/badge/nuget-v0.12.1-orange)](https://www.nuget.org/packages/FactSet.SDK.RealTimeNews/0.12.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet’s StreetAccount news and 3rd party content through an API that seamlessly integrates with
[quotes](https://developer.factset.com/api-catalog/real-time-quotes-api),
[time series](https://developer.factset.com/api-catalog/real-time-time-series-api),
[watchlists](https://developer.factset.com/api-catalog/watchlist-api-digital-portals), and other Functional APIs.

Search for news articles from various news distributors and publishers. Incorporate a multitude of search parameters such as region, category, source, article type and provider-specific meta data, to easily filter out the noise.

All search and list endpoints can be subscribed to receive streamed updates.

News providers include:

* APA
* AWP 
* Businesswire
* Cercle Finance
* Direkt News SE
* Dow Jones News
* dpa
* dpa-AFX 
* EUWAX
* GlobenewsWire
* Kauppalehti
* MT Newswires
* MoneyAM
* newsaktuell
* OMX
* PR Newswire 
* Ritzau Finans
* StreetAccount News
* TDN News
      
See the [Real-Time Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price and performance information, plus basic support for security identifier cross-reference.


This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.12.1
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.RealTimeNews -v 0.12.1
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.RealTimeNews -Version 0.12.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.RealTimeNews.Api;
using FactSet.SDK.RealTimeNews.Client;
using FactSet.SDK.RealTimeNews.Model;

namespace Example
{
    public static class GetNewsArticleGetExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.RealTimeNews.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new NewsApi(config);
            var code = "code_example";  // string | 
            var includeMedia = false;  // bool? |  (optional)  (default to false)
            var attributes = new List<string>(); // List<string> | Limit the attributes returned in the response to the specified set. (optional) 
            var language = "language_example";  // string |  (optional) 

            try
            {
                // Details for a news article.
                InlineResponse200 result = apiInstance.GetNewsArticleGet(code, includeMedia, attributes, language);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling NewsApi.GetNewsArticleGet: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*NewsApi* | [**GetNewsArticleGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewsarticleget) | **GET** /news/article/get | Details for a news article.
*NewsApi* | [**GetNewsArticleTypeGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewsarticletypeget) | **GET** /news/article/type/get | Details for a news article type.
*NewsApi* | [**GetNewsArticleTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewsarticletypelist) | **GET** /news/article/type/list | List of news article types.
*NewsApi* | [**GetNewsDistributorGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewsdistributorget) | **GET** /news/distributor/get | Details of a distributor.
*NewsApi* | [**GetNewsDistributorList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewsdistributorlist) | **GET** /news/distributor/list | List of distributors.
*NewsApi* | [**GetNewsPublisherGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewspublisherget) | **GET** /news/publisher/get | Details of a publisher.
*NewsApi* | [**GetNewsPublisherList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewspublisherlist) | **GET** /news/publisher/list | List of publishers.
*NewsApi* | [**GetNewsPublisherListByDistributor**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#getnewspublisherlistbydistributor) | **GET** /news/publisher/listByDistributor | List of publishers provided by the given distributor.
*NewsApi* | [**PostNewsArticleList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlelist) | **POST** /news/article/list | List of news articles.
*NewsApi* | [**PostNewsArticleListByChain**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlelistbychain) | **POST** /news/article/listByChain | List news articles of an article chain.
*NewsApi* | [**PostNewsArticleListByIndex**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlelistbyindex) | **POST** /news/article/listByIndex | News articles for instruments that are constituents of the given indices.
*NewsApi* | [**PostNewsArticleListByInstrument**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlelistbyinstrument) | **POST** /news/article/listByInstrument | News articles for instruments.
*NewsApi* | [**PostNewsArticleListByMediaKind**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlelistbymediakind) | **POST** /news/article/listByMediaKind | List news articles which contain media of specific media kinds.
*NewsApi* | [**PostNewsArticleSearchByText**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewsarticlesearchbytext) | **POST** /news/article/searchByText | Search for news articles using a fulltext search.
*NewsApi* | [**PostNewsPublisherSearchByName**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/NewsApi.md#postnewspublishersearchbyname) | **POST** /news/publisher/searchByName | Search for publishers.


## Documentation for Models

 - [Model.CursorBasedPaginationOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/CursorBasedPaginationOutputObject.md)
 - [Model.CursorBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.ErrorMetaObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/ErrorMetaObject.md)
 - [Model.InlineResponse200](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200.md)
 - [Model.InlineResponse2001](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001.md)
 - [Model.InlineResponse20010](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse20010.md)
 - [Model.InlineResponse20010Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse20010Data.md)
 - [Model.InlineResponse20010Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse20010Meta.md)
 - [Model.InlineResponse20011](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse20011.md)
 - [Model.InlineResponse20011Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse20011Data.md)
 - [Model.InlineResponse2001Categories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Categories.md)
 - [Model.InlineResponse2001Chain](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Chain.md)
 - [Model.InlineResponse2001Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Data.md)
 - [Model.InlineResponse2001Distributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Distributor.md)
 - [Model.InlineResponse2001Fsym](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Fsym.md)
 - [Model.InlineResponse2001FsymSecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001FsymSecurity.md)
 - [Model.InlineResponse2001Instruments](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Instruments.md)
 - [Model.InlineResponse2001Language](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Language.md)
 - [Model.InlineResponse2001Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Meta.md)
 - [Model.InlineResponse2001Publisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Publisher.md)
 - [Model.InlineResponse2001Types](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2001Types.md)
 - [Model.InlineResponse2002](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2002.md)
 - [Model.InlineResponse2002Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2002Data.md)
 - [Model.InlineResponse2002DataArticles](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2002DataArticles.md)
 - [Model.InlineResponse2002DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2002DataDistributor.md)
 - [Model.InlineResponse2003](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2003.md)
 - [Model.InlineResponse2003Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2003Data.md)
 - [Model.InlineResponse2003DataIdentifiers](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2003DataIdentifiers.md)
 - [Model.InlineResponse2003DataStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2003DataStatus.md)
 - [Model.InlineResponse2004](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2004.md)
 - [Model.InlineResponse2004Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2004Data.md)
 - [Model.InlineResponse2004DataIdentifiers](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2004DataIdentifiers.md)
 - [Model.InlineResponse2004DataStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2004DataStatus.md)
 - [Model.InlineResponse2005](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2005.md)
 - [Model.InlineResponse2005Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2005Data.md)
 - [Model.InlineResponse2006](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2006.md)
 - [Model.InlineResponse2006Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2006Data.md)
 - [Model.InlineResponse2007](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2007.md)
 - [Model.InlineResponse2007Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2007Data.md)
 - [Model.InlineResponse2007DataDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2007DataDelivery.md)
 - [Model.InlineResponse2008](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2008.md)
 - [Model.InlineResponse2008Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2008Data.md)
 - [Model.InlineResponse2009](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2009.md)
 - [Model.InlineResponse2009Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2009Data.md)
 - [Model.InlineResponse2009DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse2009DataDistributor.md)
 - [Model.InlineResponse200Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200Data.md)
 - [Model.InlineResponse200DataCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataCategories.md)
 - [Model.InlineResponse200DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataDistributor.md)
 - [Model.InlineResponse200DataFsym](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataFsym.md)
 - [Model.InlineResponse200DataFsymSecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataFsymSecurity.md)
 - [Model.InlineResponse200DataInstruments](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataInstruments.md)
 - [Model.InlineResponse200DataLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataLanguage.md)
 - [Model.InlineResponse200DataMedia](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataMedia.md)
 - [Model.InlineResponse200DataPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataPublisher.md)
 - [Model.InlineResponse200DataTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200DataTypes.md)
 - [Model.InlineResponse200Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/InlineResponse200Meta.md)
 - [Model.OffsetBasedPaginationOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/OffsetBasedPaginationOutputObject.md)
 - [Model.OffsetBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.PartialOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PartialOutputObject.md)
 - [Model.PostNewsArticleListByChainRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByChainRequest.md)
 - [Model.PostNewsArticleListByChainRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByChainRequestData.md)
 - [Model.PostNewsArticleListByChainRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByChainRequestDataFilter.md)
 - [Model.PostNewsArticleListByIndexRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByIndexRequest.md)
 - [Model.PostNewsArticleListByIndexRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByIndexRequestData.md)
 - [Model.PostNewsArticleListByIndexRequestDataIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByIndexRequestDataIdentifier.md)
 - [Model.PostNewsArticleListByInstrumentRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByInstrumentRequest.md)
 - [Model.PostNewsArticleListByInstrumentRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByInstrumentRequestData.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md)
 - [Model.PostNewsArticleListByMediaKindRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByMediaKindRequest.md)
 - [Model.PostNewsArticleListByMediaKindRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListByMediaKindRequestData.md)
 - [Model.PostNewsArticleListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequest.md)
 - [Model.PostNewsArticleListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestData.md)
 - [Model.PostNewsArticleListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilter.md)
 - [Model.PostNewsArticleListRequestDataFilterCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterCategories.md)
 - [Model.PostNewsArticleListRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterDistributor.md)
 - [Model.PostNewsArticleListRequestDataFilterLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterLanguage.md)
 - [Model.PostNewsArticleListRequestDataFilterPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterPublisher.md)
 - [Model.PostNewsArticleListRequestDataFilterRange](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterRange.md)
 - [Model.PostNewsArticleListRequestDataFilterRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterRegions.md)
 - [Model.PostNewsArticleListRequestDataFilterTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestDataFilterTypes.md)
 - [Model.PostNewsArticleListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestMeta.md)
 - [Model.PostNewsArticleListRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestMetaPagination.md)
 - [Model.PostNewsArticleListRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleListRequestMetaSubscription.md)
 - [Model.PostNewsArticleSearchByTextRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequest.md)
 - [Model.PostNewsArticleSearchByTextRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestData.md)
 - [Model.PostNewsArticleSearchByTextRequestDataCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataCategories.md)
 - [Model.PostNewsArticleSearchByTextRequestDataCriteria](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataCriteria.md)
 - [Model.PostNewsArticleSearchByTextRequestDataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataDistributor.md)
 - [Model.PostNewsArticleSearchByTextRequestDataIndices](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataIndices.md)
 - [Model.PostNewsArticleSearchByTextRequestDataInstruments](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataInstruments.md)
 - [Model.PostNewsArticleSearchByTextRequestDataLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataLanguage.md)
 - [Model.PostNewsArticleSearchByTextRequestDataPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataPublisher.md)
 - [Model.PostNewsArticleSearchByTextRequestDataRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataRegions.md)
 - [Model.PostNewsArticleSearchByTextRequestDataText](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataText.md)
 - [Model.PostNewsArticleSearchByTextRequestDataTextCriteria](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataTextCriteria.md)
 - [Model.PostNewsArticleSearchByTextRequestDataTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsArticleSearchByTextRequestDataTypes.md)
 - [Model.PostNewsPublisherSearchByNameRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequest.md)
 - [Model.PostNewsPublisherSearchByNameRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequestData.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequestDataFilter.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilterDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequestDataFilterDelivery.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequestDataFilterDistributor.md)
 - [Model.PostNewsPublisherSearchByNameRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/PostNewsPublisherSearchByNameRequestMeta.md)
 - [Model.StatusObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v3/docs/StatusObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
