code/dotnet/RealTimeNews/v4/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time News client library for .NET

[![API Version](https://img.shields.io/badge/api-v4.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Nuget](https://img.shields.io/badge/nuget-v0.20.0-orange)](https://www.nuget.org/packages/FactSet.SDK.RealTimeNews/0.20.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Consume FactSet’s StreetAccount news and 3rd party content through an API that seamlessly integrates with
[quotes](https://developer.factset.com/api-catalog/real-time-quotes-api),
[time series](https://developer.factset.com/api-catalog/real-time-time-series-api),
[watchlists](https://developer.factset.com/api-catalog/watchlist-api-digital-portals), and other Functional APIs.

Search for news articles from various news distributors and publishers. Incorporate a multitude of search parameters such as region, category, source, article type and provider-specific meta data, to easily filter out the noise.

All search and list endpoints can be subscribed to receive streamed updates.

News providers include:

* APA
* AWP 
* Businesswire
* Cercle Finance
* Direkt News SE
* Dow Jones News
* dpa
* dpa-AFX 
* EUWAX
* GlobenewsWire
* Kauppalehti
* MT Newswires
* MoneyAM
* newsaktuell
* OMX
* PR Newswire 
* Ritzau Finans
* StreetAccount News
* TDN News
      
See the [Real-Time Quotes API](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price and performance information, plus basic support for security identifier cross-reference.


This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 4.0.0
- SDK version: 0.20.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.RealTimeNews -v 0.20.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.RealTimeNews -Version 0.20.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.RealTimeNews.Api;
using FactSet.SDK.RealTimeNews.Client;
using FactSet.SDK.RealTimeNews.Model;

namespace Example
{
    public static class GetBasicAssetClassListExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.RealTimeNews.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new BasicApi(config);
            var attributes = new List<string>(); // List<string> | Limit the attributes returned in the response to the specified set. (optional) 

            try
            {
                // List of asset classes.
                InlineResponse200 result = apiInstance.GetBasicAssetClassList(attributes);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling BasicApi.GetBasicAssetClassList: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BasicApi* | [**GetBasicAssetClassList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicassetclasslist) | **GET** /basic/asset-class/list | List of asset classes.
*BasicApi* | [**GetBasicBenchmarkTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicbenchmarktypelist) | **GET** /basic/benchmark/type/list | List of benchmark types.
*BasicApi* | [**GetBasicFrequencyTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicfrequencytypelist) | **GET** /basic/frequency/type/list | List of frequency types.
*BasicApi* | [**GetBasicLanguageGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasiclanguageget) | **GET** /basic/language/get | Details for a language.
*BasicApi* | [**GetBasicLanguageGetByCode**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasiclanguagegetbycode) | **GET** /basic/language/get-by-code | Details for a language identified by code.
*BasicApi* | [**GetBasicLanguageList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasiclanguagelist) | **GET** /basic/language/list | List of languages.
*BasicApi* | [**GetBasicMarketGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicmarketget) | **GET** /basic/market/get | Details of a market.
*BasicApi* | [**GetBasicMarketGroupList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicmarketgrouplist) | **GET** /basic/market/group/list | List of market groups.
*BasicApi* | [**GetBasicMarketTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicmarkettypelist) | **GET** /basic/market/type/list | List of market types.
*BasicApi* | [**GetBasicMediaKindList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicmediakindlist) | **GET** /basic/media/kind/list | List of media kinds.
*BasicApi* | [**GetBasicRegionContinentGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregioncontinentget) | **GET** /basic/region/continent/get | Details for a continent.
*BasicApi* | [**GetBasicRegionContinentList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregioncontinentlist) | **GET** /basic/region/continent/list | List of continents.
*BasicApi* | [**GetBasicRegionCountryGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregioncountryget) | **GET** /basic/region/country/get | Details for a country.
*BasicApi* | [**GetBasicRegionCountryGetByCode**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregioncountrygetbycode) | **GET** /basic/region/country/get-by-code | Details for a country identified by code.
*BasicApi* | [**GetBasicRegionCountryList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregioncountrylist) | **GET** /basic/region/country/list | List of countries.
*BasicApi* | [**GetBasicRegionGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregionget) | **GET** /basic/region/get | Details for a region.
*BasicApi* | [**GetBasicRegionList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicregionlist) | **GET** /basic/region/list | List of regions.
*BasicApi* | [**GetBasicTimezoneGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasictimezoneget) | **GET** /basic/timezone/get | Details of a timezone.
*BasicApi* | [**GetBasicTimezoneGetByName**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasictimezonegetbyname) | **GET** /basic/timezone/get-by-name | Details of a timezone identified by name.
*BasicApi* | [**GetBasicValueUnitAlternativeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicvalueunitalternativelist) | **GET** /basic/value-unit/alternative/list | List of alternative units.
*BasicApi* | [**GetBasicValueUnitCurrencyFractionalGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicvalueunitcurrencyfractionalget) | **GET** /basic/value-unit/currency/fractional/get | Details of a fractional currency.
*BasicApi* | [**GetBasicValueUnitCurrencyFractionalList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicvalueunitcurrencyfractionallist) | **GET** /basic/value-unit/currency/fractional/list | List of fractional currencies.
*BasicApi* | [**GetBasicValueUnitGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#getbasicvalueunitget) | **GET** /basic/value-unit/get | Details of a value unit.
*BasicApi* | [**PostBasicBackgroundTextTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicbackgroundtexttypelist) | **POST** /basic/background-text/type/list | List of background text types.
*BasicApi* | [**PostBasicDeliveryList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicdeliverylist) | **POST** /basic/delivery/list | List of deliveries.
*BasicApi* | [**PostBasicMarketList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicmarketlist) | **POST** /basic/market/list | List of markets.
*BasicApi* | [**PostBasicMediaTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicmediatypelist) | **POST** /basic/media/type/list | List of Internet media types.
*BasicApi* | [**PostBasicMicOperatingList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicmicoperatinglist) | **POST** /basic/mic/operating/list | List of operating market identifier codes (MIC).
*BasicApi* | [**PostBasicTimezoneList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasictimezonelist) | **POST** /basic/timezone/list | List of timezones.
*BasicApi* | [**PostBasicValueUnitCurrencyList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicvalueunitcurrencylist) | **POST** /basic/value-unit/currency/list | List of currencies.
*BasicApi* | [**PostBasicValueUnitCurrencyMainList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicvalueunitcurrencymainlist) | **POST** /basic/value-unit/currency/main/list | List of main currencies.
*BasicApi* | [**PostBasicValueUnitList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/BasicApi.md#postbasicvalueunitlist) | **POST** /basic/value-unit/list | List of value units.
*CategoryApi* | [**GetCategoryDatasetList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorydatasetlist) | **GET** /category/dataset/list | List of entitled category datasets.
*CategoryApi* | [**GetCategoryGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategoryget) | **GET** /category/get | Details of a category.
*CategoryApi* | [**GetCategoryInstrumentList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategoryinstrumentlist) | **GET** /category/instrument/list | List of instruments where a specific dataset has assigned a given category.
*CategoryApi* | [**GetCategoryLevelGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorylevelget) | **GET** /category/level/get | Details of a category level.
*CategoryApi* | [**GetCategoryList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorylist) | **GET** /category/list | List of categories.
*CategoryApi* | [**GetCategoryListByLevel**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorylistbylevel) | **GET** /category/list-by-level | List of categories assigned to a category level.
*CategoryApi* | [**GetCategoryListBySystem**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorylistbysystem) | **GET** /category/list-by-system | List of categories assigned to a category system.
*CategoryApi* | [**GetCategoryPathGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorypathget) | **GET** /category/path/get | Path from the first level to the level of a specific category.
*CategoryApi* | [**GetCategorySystemGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorysystemget) | **GET** /category/system/get | Details of an entitled category system.
*CategoryApi* | [**GetCategorySystemList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorysystemlist) | **GET** /category/system/list | List of entitled category systems.
*CategoryApi* | [**GetCategorySystemTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CategoryApi.md#getcategorysystemtypelist) | **GET** /category/system/type/list | List of category system types.
*NewsApi* | [**GetNewsArticleGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewsarticleget) | **GET** /news/article/get | Details for a news article.
*NewsApi* | [**GetNewsArticleTypeGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewsarticletypeget) | **GET** /news/article/type/get | Details for a news article type.
*NewsApi* | [**GetNewsArticleTypeList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewsarticletypelist) | **GET** /news/article/type/list | List of news article types.
*NewsApi* | [**GetNewsDistributorGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewsdistributorget) | **GET** /news/distributor/get | Details of a distributor.
*NewsApi* | [**GetNewsDistributorList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewsdistributorlist) | **GET** /news/distributor/list | List of distributors.
*NewsApi* | [**GetNewsPublisherGet**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewspublisherget) | **GET** /news/publisher/get | Details of a publisher.
*NewsApi* | [**GetNewsPublisherList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewspublisherlist) | **GET** /news/publisher/list | List of publishers.
*NewsApi* | [**GetNewsPublisherListByDistributor**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#getnewspublisherlistbydistributor) | **GET** /news/publisher/list-by-distributor | List of publishers provided by the given distributor.
*NewsApi* | [**PostNewsArticleList**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlelist) | **POST** /news/article/list | List of news articles.
*NewsApi* | [**PostNewsArticleListByChain**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlelistbychain) | **POST** /news/article/list-by-chain | List news articles of an article chain.
*NewsApi* | [**PostNewsArticleListByIndex**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlelistbyindex) | **POST** /news/article/list-by-index | News articles for instruments that are constituents of the given indices.
*NewsApi* | [**PostNewsArticleListByInstrument**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlelistbyinstrument) | **POST** /news/article/list-by-instrument | News articles for instruments.
*NewsApi* | [**PostNewsArticleListByMediaKind**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlelistbymediakind) | **POST** /news/article/list-by-media-kind | List news articles which contain media of specific media kinds.
*NewsApi* | [**PostNewsArticleSearchByText**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewsarticlesearchbytext) | **POST** /news/article/search-by-text | Search for news articles using a fulltext search.
*NewsApi* | [**PostNewsPublisherSearchByName**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/NewsApi.md#postnewspublishersearchbyname) | **POST** /news/publisher/search-by-name | Search for publishers.


## Documentation for Models

 - [Model.CursorBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.GetBasicAssetClassListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicAssetClassListDataItems.md)
 - [Model.GetBasicBenchmarkTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicBenchmarkTypeListDataItems.md)
 - [Model.GetBasicFrequencyTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicFrequencyTypeListDataItems.md)
 - [Model.GetBasicLanguageListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicLanguageListDataItems.md)
 - [Model.GetBasicMarketGroupListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicMarketGroupListDataItems.md)
 - [Model.GetBasicMarketTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicMarketTypeListDataItems.md)
 - [Model.GetBasicMediaKindListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicMediaKindListDataItems.md)
 - [Model.GetBasicRegionContinentGetDataCountriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionContinentGetDataCountriesItems.md)
 - [Model.GetBasicRegionContinentListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionContinentListDataItems.md)
 - [Model.GetBasicRegionCountryGetByCodeDataSubdivisionsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionCountryGetByCodeDataSubdivisionsItems.md)
 - [Model.GetBasicRegionCountryGetDataSubdivisionsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionCountryGetDataSubdivisionsItems.md)
 - [Model.GetBasicRegionCountryListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionCountryListDataItems.md)
 - [Model.GetBasicRegionGetDataNestedRegionsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionGetDataNestedRegionsItems.md)
 - [Model.GetBasicRegionListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicRegionListDataItems.md)
 - [Model.GetBasicValueUnitAlternativeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicValueUnitAlternativeListDataItems.md)
 - [Model.GetBasicValueUnitCurrencyFractionalListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicValueUnitCurrencyFractionalListDataItems.md)
 - [Model.GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetBasicValueUnitCurrencyFractionalListDataItemsMainCurrency.md)
 - [Model.GetCategoryDatasetListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryDatasetListDataItems.md)
 - [Model.GetCategoryDatasetListDataItemsDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryDatasetListDataItemsDelivery.md)
 - [Model.GetCategoryDatasetListDataItemsSystem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryDatasetListDataItemsSystem.md)
 - [Model.GetCategoryInstrumentListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryInstrumentListDataItems.md)
 - [Model.GetCategoryListByLevelDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListByLevelDataCategoriesItems.md)
 - [Model.GetCategoryListByLevelDataCategoriesItemsParent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListByLevelDataCategoriesItemsParent.md)
 - [Model.GetCategoryListBySystemDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListBySystemDataCategoriesItems.md)
 - [Model.GetCategoryListBySystemDataCategoriesItemsLevel](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListBySystemDataCategoriesItemsLevel.md)
 - [Model.GetCategoryListBySystemDataCategoriesItemsParent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListBySystemDataCategoriesItemsParent.md)
 - [Model.GetCategoryListDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListDataCategoriesItems.md)
 - [Model.GetCategoryListDataCategoriesItemsLevel](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListDataCategoriesItemsLevel.md)
 - [Model.GetCategoryListDataCategoriesItemsParent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryListDataCategoriesItemsParent.md)
 - [Model.GetCategoryPathGetDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategoryPathGetDataCategoriesItems.md)
 - [Model.GetCategorySystemGetDataLevelsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategorySystemGetDataLevelsItems.md)
 - [Model.GetCategorySystemListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategorySystemListDataItems.md)
 - [Model.GetCategorySystemListDataItemsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategorySystemListDataItemsType.md)
 - [Model.GetCategorySystemTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetCategorySystemTypeListDataItems.md)
 - [Model.GetNewsArticleGetDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsArticleGetDataCategoriesItems.md)
 - [Model.GetNewsArticleGetDataInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsArticleGetDataInstrumentsItems.md)
 - [Model.GetNewsArticleGetDataMediaItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsArticleGetDataMediaItems.md)
 - [Model.GetNewsArticleGetDataTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsArticleGetDataTypesItems.md)
 - [Model.GetNewsArticleTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsArticleTypeListDataItems.md)
 - [Model.GetNewsDistributorListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsDistributorListDataItems.md)
 - [Model.GetNewsDistributorListDataItemsDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsDistributorListDataItemsDelivery.md)
 - [Model.GetNewsPublisherListByDistributorDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsPublisherListByDistributorDataItems.md)
 - [Model.GetNewsPublisherListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsPublisherListDataItems.md)
 - [Model.GetNewsPublisherListDataItemsDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/GetNewsPublisherListDataItemsDistributor.md)
 - [Model.InlineResponse200](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse200.md)
 - [Model.InlineResponse2001](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2001.md)
 - [Model.InlineResponse20010](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20010.md)
 - [Model.InlineResponse20011](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20011.md)
 - [Model.InlineResponse20012](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20012.md)
 - [Model.InlineResponse20013](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20013.md)
 - [Model.InlineResponse20014](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20014.md)
 - [Model.InlineResponse20015](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20015.md)
 - [Model.InlineResponse20015Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20015Data.md)
 - [Model.InlineResponse20016](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20016.md)
 - [Model.InlineResponse20017](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20017.md)
 - [Model.InlineResponse20017Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20017Data.md)
 - [Model.InlineResponse20018](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20018.md)
 - [Model.InlineResponse20019](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20019.md)
 - [Model.InlineResponse20019Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20019Data.md)
 - [Model.InlineResponse2002](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2002.md)
 - [Model.InlineResponse20020](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20020.md)
 - [Model.InlineResponse20020Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20020Data.md)
 - [Model.InlineResponse20021](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20021.md)
 - [Model.InlineResponse20022](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20022.md)
 - [Model.InlineResponse20022Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20022Data.md)
 - [Model.InlineResponse20023](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20023.md)
 - [Model.InlineResponse20023Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20023Data.md)
 - [Model.InlineResponse20024](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20024.md)
 - [Model.InlineResponse20025](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20025.md)
 - [Model.InlineResponse20025Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20025Data.md)
 - [Model.InlineResponse20026](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20026.md)
 - [Model.InlineResponse20027](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20027.md)
 - [Model.InlineResponse20028](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20028.md)
 - [Model.InlineResponse20029](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20029.md)
 - [Model.InlineResponse20029Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20029Data.md)
 - [Model.InlineResponse20029DataMainCurrency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20029DataMainCurrency.md)
 - [Model.InlineResponse2003](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2003.md)
 - [Model.InlineResponse20030](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20030.md)
 - [Model.InlineResponse20031](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20031.md)
 - [Model.InlineResponse20032](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032.md)
 - [Model.InlineResponse20032Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032Data.md)
 - [Model.InlineResponse20032DataLevel](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032DataLevel.md)
 - [Model.InlineResponse20032DataParent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032DataParent.md)
 - [Model.InlineResponse20032DataParentLevel](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032DataParentLevel.md)
 - [Model.InlineResponse20032DataSystem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20032DataSystem.md)
 - [Model.InlineResponse20033](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20033.md)
 - [Model.InlineResponse20033Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20033Data.md)
 - [Model.InlineResponse20033DataSystem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20033DataSystem.md)
 - [Model.InlineResponse20034](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20034.md)
 - [Model.InlineResponse20034Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20034Data.md)
 - [Model.InlineResponse20034DataParent](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20034DataParent.md)
 - [Model.InlineResponse20034DataSystem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20034DataSystem.md)
 - [Model.InlineResponse20034Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20034Meta.md)
 - [Model.InlineResponse20035](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20035.md)
 - [Model.InlineResponse20035Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20035Data.md)
 - [Model.InlineResponse20036](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20036.md)
 - [Model.InlineResponse20037](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20037.md)
 - [Model.InlineResponse20037Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20037Meta.md)
 - [Model.InlineResponse20038](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20038.md)
 - [Model.InlineResponse20038Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20038Data.md)
 - [Model.InlineResponse20038DataSystem](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20038DataSystem.md)
 - [Model.InlineResponse20039](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20039.md)
 - [Model.InlineResponse20039Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20039Data.md)
 - [Model.InlineResponse2004](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2004.md)
 - [Model.InlineResponse20040](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20040.md)
 - [Model.InlineResponse20040Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20040Data.md)
 - [Model.InlineResponse20040DataType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20040DataType.md)
 - [Model.InlineResponse20041](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20041.md)
 - [Model.InlineResponse20042](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20042.md)
 - [Model.InlineResponse20043](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20043.md)
 - [Model.InlineResponse20043Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20043Data.md)
 - [Model.InlineResponse20043DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20043DataDistributor.md)
 - [Model.InlineResponse20043DataLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20043DataLanguage.md)
 - [Model.InlineResponse20043DataPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20043DataPublisher.md)
 - [Model.InlineResponse20044](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20044.md)
 - [Model.InlineResponse20044Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20044Meta.md)
 - [Model.InlineResponse20045](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20045.md)
 - [Model.InlineResponse20045Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20045Data.md)
 - [Model.InlineResponse20045DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20045DataDistributor.md)
 - [Model.InlineResponse20045DataPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20045DataPublisher.md)
 - [Model.InlineResponse20046](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20046.md)
 - [Model.InlineResponse20046Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20046Data.md)
 - [Model.InlineResponse20047](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20047.md)
 - [Model.InlineResponse20047Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20047Data.md)
 - [Model.InlineResponse20048](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20048.md)
 - [Model.InlineResponse20049](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20049.md)
 - [Model.InlineResponse2005](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2005.md)
 - [Model.InlineResponse20050](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20050.md)
 - [Model.InlineResponse20050Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20050Data.md)
 - [Model.InlineResponse20051](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20051.md)
 - [Model.InlineResponse20052](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20052.md)
 - [Model.InlineResponse20052Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20052Data.md)
 - [Model.InlineResponse20052DataDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20052DataDelivery.md)
 - [Model.InlineResponse20053](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20053.md)
 - [Model.InlineResponse20054](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20054.md)
 - [Model.InlineResponse20054Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20054Data.md)
 - [Model.InlineResponse20054DataDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20054DataDistributor.md)
 - [Model.InlineResponse20055](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20055.md)
 - [Model.InlineResponse20056](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20056.md)
 - [Model.InlineResponse20057](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse20057.md)
 - [Model.InlineResponse2005Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2005Data.md)
 - [Model.InlineResponse2006](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2006.md)
 - [Model.InlineResponse2006Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2006Data.md)
 - [Model.InlineResponse2007](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2007.md)
 - [Model.InlineResponse2008](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008.md)
 - [Model.InlineResponse2008Data](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008Data.md)
 - [Model.InlineResponse2008DataCountry](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008DataCountry.md)
 - [Model.InlineResponse2008DataGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008DataGroup.md)
 - [Model.InlineResponse2008DataTimezone](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008DataTimezone.md)
 - [Model.InlineResponse2008DataType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2008DataType.md)
 - [Model.InlineResponse2009](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2009.md)
 - [Model.InlineResponse2009Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse2009Meta.md)
 - [Model.InlineResponse200Meta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/InlineResponse200Meta.md)
 - [Model.OffsetBasedPaginationOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/OffsetBasedPaginationOutputObject.md)
 - [Model.OffsetBasedPaginationOutputObjectWithoutTotal](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.PartialOutputObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PartialOutputObject.md)
 - [Model.PostBasicBackgroundTextTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicBackgroundTextTypeListDataItems.md)
 - [Model.PostBasicBackgroundTextTypeListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicBackgroundTextTypeListRequest.md)
 - [Model.PostBasicBackgroundTextTypeListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicBackgroundTextTypeListRequestData.md)
 - [Model.PostBasicBackgroundTextTypeListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicBackgroundTextTypeListRequestDataFilter.md)
 - [Model.PostBasicBackgroundTextTypeListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicBackgroundTextTypeListRequestMeta.md)
 - [Model.PostBasicDeliveryListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicDeliveryListDataItems.md)
 - [Model.PostBasicDeliveryListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicDeliveryListRequest.md)
 - [Model.PostBasicDeliveryListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicDeliveryListRequestData.md)
 - [Model.PostBasicDeliveryListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicDeliveryListRequestDataFilter.md)
 - [Model.PostBasicDeliveryListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicDeliveryListRequestMeta.md)
 - [Model.PostBasicMarketListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListDataItems.md)
 - [Model.PostBasicMarketListDataItemsCountry](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListDataItemsCountry.md)
 - [Model.PostBasicMarketListDataItemsGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListDataItemsGroup.md)
 - [Model.PostBasicMarketListDataItemsTimezone](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListDataItemsTimezone.md)
 - [Model.PostBasicMarketListDataItemsType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListDataItemsType.md)
 - [Model.PostBasicMarketListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequest.md)
 - [Model.PostBasicMarketListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequestData.md)
 - [Model.PostBasicMarketListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequestDataFilter.md)
 - [Model.PostBasicMarketListRequestDataFilterMarkets](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequestDataFilterMarkets.md)
 - [Model.PostBasicMarketListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequestMeta.md)
 - [Model.PostBasicMarketListRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMarketListRequestMetaPagination.md)
 - [Model.PostBasicMediaTypeListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListDataItems.md)
 - [Model.PostBasicMediaTypeListDataItemsKind](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListDataItemsKind.md)
 - [Model.PostBasicMediaTypeListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListRequest.md)
 - [Model.PostBasicMediaTypeListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListRequestData.md)
 - [Model.PostBasicMediaTypeListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListRequestDataFilter.md)
 - [Model.PostBasicMediaTypeListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMediaTypeListRequestMeta.md)
 - [Model.PostBasicMicOperatingListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMicOperatingListDataItems.md)
 - [Model.PostBasicMicOperatingListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMicOperatingListRequest.md)
 - [Model.PostBasicMicOperatingListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMicOperatingListRequestData.md)
 - [Model.PostBasicMicOperatingListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMicOperatingListRequestDataFilter.md)
 - [Model.PostBasicMicOperatingListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicMicOperatingListRequestMeta.md)
 - [Model.PostBasicTimezoneListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicTimezoneListDataItems.md)
 - [Model.PostBasicTimezoneListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicTimezoneListRequest.md)
 - [Model.PostBasicTimezoneListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicTimezoneListRequestData.md)
 - [Model.PostBasicTimezoneListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicTimezoneListRequestDataFilter.md)
 - [Model.PostBasicValueUnitCurrencyListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyListDataItems.md)
 - [Model.PostBasicValueUnitCurrencyListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyListRequest.md)
 - [Model.PostBasicValueUnitCurrencyListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyListRequestMeta.md)
 - [Model.PostBasicValueUnitCurrencyMainListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyMainListDataItems.md)
 - [Model.PostBasicValueUnitCurrencyMainListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyMainListRequest.md)
 - [Model.PostBasicValueUnitCurrencyMainListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyMainListRequestData.md)
 - [Model.PostBasicValueUnitCurrencyMainListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitCurrencyMainListRequestDataFilter.md)
 - [Model.PostBasicValueUnitListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitListDataItems.md)
 - [Model.PostBasicValueUnitListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitListRequest.md)
 - [Model.PostBasicValueUnitListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitListRequestData.md)
 - [Model.PostBasicValueUnitListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitListRequestDataFilter.md)
 - [Model.PostBasicValueUnitListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostBasicValueUnitListRequestMeta.md)
 - [Model.PostNewsArticleListByChainDataArticlesCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainDataArticlesCategoriesItems.md)
 - [Model.PostNewsArticleListByChainDataArticlesInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainDataArticlesInstrumentsItems.md)
 - [Model.PostNewsArticleListByChainDataArticlesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainDataArticlesItems.md)
 - [Model.PostNewsArticleListByChainDataArticlesItemsLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainDataArticlesItemsLanguage.md)
 - [Model.PostNewsArticleListByChainDataArticlesTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainDataArticlesTypesItems.md)
 - [Model.PostNewsArticleListByChainRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequest.md)
 - [Model.PostNewsArticleListByChainRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequestData.md)
 - [Model.PostNewsArticleListByChainRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequestDataFilter.md)
 - [Model.PostNewsArticleListByChainRequestDataFilterRange](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequestDataFilterRange.md)
 - [Model.PostNewsArticleListByChainRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequestMeta.md)
 - [Model.PostNewsArticleListByChainRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByChainRequestMetaSubscription.md)
 - [Model.PostNewsArticleListByIndexDataArticlesCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesCategoriesItems.md)
 - [Model.PostNewsArticleListByIndexDataArticlesInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesInstrumentsItems.md)
 - [Model.PostNewsArticleListByIndexDataArticlesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesItems.md)
 - [Model.PostNewsArticleListByIndexDataArticlesItemsChain](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesItemsChain.md)
 - [Model.PostNewsArticleListByIndexDataArticlesItemsDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesItemsDistributor.md)
 - [Model.PostNewsArticleListByIndexDataArticlesItemsLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesItemsLanguage.md)
 - [Model.PostNewsArticleListByIndexDataArticlesItemsPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesItemsPublisher.md)
 - [Model.PostNewsArticleListByIndexDataArticlesTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataArticlesTypesItems.md)
 - [Model.PostNewsArticleListByIndexDataIdentifiersItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataIdentifiersItems.md)
 - [Model.PostNewsArticleListByIndexDataIdentifiersItemsStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexDataIdentifiersItemsStatus.md)
 - [Model.PostNewsArticleListByIndexRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequest.md)
 - [Model.PostNewsArticleListByIndexRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestData.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilter.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterCategories.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterDistributor.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterLanguage.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterPublisher.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterRegions.md)
 - [Model.PostNewsArticleListByIndexRequestDataFilterTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataFilterTypes.md)
 - [Model.PostNewsArticleListByIndexRequestDataIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestDataIdentifier.md)
 - [Model.PostNewsArticleListByIndexRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestMeta.md)
 - [Model.PostNewsArticleListByIndexRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByIndexRequestMetaSubscription.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesCategoriesItems.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItems.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsym.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesInstrumentsItemsFsymSecurity.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesItems.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesItemsChain](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesItemsChain.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesItemsDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesItemsDistributor.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesItemsLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesItemsLanguage.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesItemsPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesItemsPublisher.md)
 - [Model.PostNewsArticleListByInstrumentDataArticlesTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataArticlesTypesItems.md)
 - [Model.PostNewsArticleListByInstrumentDataIdentifiersItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataIdentifiersItems.md)
 - [Model.PostNewsArticleListByInstrumentDataIdentifiersItemsStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentDataIdentifiersItemsStatus.md)
 - [Model.PostNewsArticleListByInstrumentRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequest.md)
 - [Model.PostNewsArticleListByInstrumentRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestData.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataFilter.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataFilterCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataFilterCategories.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataFilterDistributor.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataFilterPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataFilterPublisher.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataFilterRange](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataFilterRange.md)
 - [Model.PostNewsArticleListByInstrumentRequestDataIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestDataIdentifier.md)
 - [Model.PostNewsArticleListByInstrumentRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestMeta.md)
 - [Model.PostNewsArticleListByInstrumentRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByInstrumentRequestMetaSubscription.md)
 - [Model.PostNewsArticleListByMediaKindDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataCategoriesItems.md)
 - [Model.PostNewsArticleListByMediaKindDataInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataInstrumentsItems.md)
 - [Model.PostNewsArticleListByMediaKindDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataItems.md)
 - [Model.PostNewsArticleListByMediaKindDataItemsChain](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataItemsChain.md)
 - [Model.PostNewsArticleListByMediaKindDataItemsDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataItemsDistributor.md)
 - [Model.PostNewsArticleListByMediaKindDataItemsLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataItemsLanguage.md)
 - [Model.PostNewsArticleListByMediaKindDataItemsPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataItemsPublisher.md)
 - [Model.PostNewsArticleListByMediaKindDataTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindDataTypesItems.md)
 - [Model.PostNewsArticleListByMediaKindRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequest.md)
 - [Model.PostNewsArticleListByMediaKindRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestData.md)
 - [Model.PostNewsArticleListByMediaKindRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestDataFilter.md)
 - [Model.PostNewsArticleListByMediaKindRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestDataFilterDistributor.md)
 - [Model.PostNewsArticleListByMediaKindRequestDataFilterLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestDataFilterLanguage.md)
 - [Model.PostNewsArticleListByMediaKindRequestDataFilterPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestDataFilterPublisher.md)
 - [Model.PostNewsArticleListByMediaKindRequestDataFilterTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestDataFilterTypes.md)
 - [Model.PostNewsArticleListByMediaKindRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestMeta.md)
 - [Model.PostNewsArticleListByMediaKindRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListByMediaKindRequestMetaSubscription.md)
 - [Model.PostNewsArticleListDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListDataCategoriesItems.md)
 - [Model.PostNewsArticleListDataInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListDataInstrumentsItems.md)
 - [Model.PostNewsArticleListDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListDataItems.md)
 - [Model.PostNewsArticleListDataItemsChain](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListDataItemsChain.md)
 - [Model.PostNewsArticleListDataTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListDataTypesItems.md)
 - [Model.PostNewsArticleListRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequest.md)
 - [Model.PostNewsArticleListRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestData.md)
 - [Model.PostNewsArticleListRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilter.md)
 - [Model.PostNewsArticleListRequestDataFilterCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterCategories.md)
 - [Model.PostNewsArticleListRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterDistributor.md)
 - [Model.PostNewsArticleListRequestDataFilterLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterLanguage.md)
 - [Model.PostNewsArticleListRequestDataFilterPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterPublisher.md)
 - [Model.PostNewsArticleListRequestDataFilterRange](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterRange.md)
 - [Model.PostNewsArticleListRequestDataFilterRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterRegions.md)
 - [Model.PostNewsArticleListRequestDataFilterTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestDataFilterTypes.md)
 - [Model.PostNewsArticleListRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestMeta.md)
 - [Model.PostNewsArticleListRequestMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestMetaPagination.md)
 - [Model.PostNewsArticleListRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleListRequestMetaSubscription.md)
 - [Model.PostNewsArticleSearchByTextDataCategoriesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCategoriesItems.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItems.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsCategories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsCategories.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsDistributor.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsIndices](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsIndices.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsInstruments](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsInstruments.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsLanguage](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsLanguage.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsPublisher.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsRegions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsRegions.md)
 - [Model.PostNewsArticleSearchByTextDataCriteriaItemsTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataCriteriaItemsTypes.md)
 - [Model.PostNewsArticleSearchByTextDataInstrumentsItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataInstrumentsItems.md)
 - [Model.PostNewsArticleSearchByTextDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataItems.md)
 - [Model.PostNewsArticleSearchByTextDataItemsPublisher](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataItemsPublisher.md)
 - [Model.PostNewsArticleSearchByTextDataTypesItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextDataTypesItems.md)
 - [Model.PostNewsArticleSearchByTextRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequest.md)
 - [Model.PostNewsArticleSearchByTextRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequestData.md)
 - [Model.PostNewsArticleSearchByTextRequestDataText](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequestDataText.md)
 - [Model.PostNewsArticleSearchByTextRequestDataTextCriteria](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequestDataTextCriteria.md)
 - [Model.PostNewsArticleSearchByTextRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequestMeta.md)
 - [Model.PostNewsArticleSearchByTextRequestMetaSubscription](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsArticleSearchByTextRequestMetaSubscription.md)
 - [Model.PostNewsPublisherSearchByNameDataItems](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameDataItems.md)
 - [Model.PostNewsPublisherSearchByNameRequest](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequest.md)
 - [Model.PostNewsPublisherSearchByNameRequestData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequestData.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilter](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequestDataFilter.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilterDelivery](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequestDataFilterDelivery.md)
 - [Model.PostNewsPublisherSearchByNameRequestDataFilterDistributor](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequestDataFilterDistributor.md)
 - [Model.PostNewsPublisherSearchByNameRequestMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/PostNewsPublisherSearchByNameRequestMeta.md)
 - [Model.StatusObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/RealTimeNews/v4/docs/StatusObject.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2025 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
